dark mode and button issue solve

--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,9 @@
     color: #fff;
 }
 
+.dark .bg-color2 {
+    background: #666;
+}
 /* code for dark mode end */
 
 /* color codes */
