--- a/src/pages/Shared/Header/Header.css
+++ b/src/pages/Shared/Header/Header.css
@@ -4,7 +4,9 @@
     padding: 15px 0 !important;
     background: #fff;
 }
-
+.dark .navbar {
+    background: #666;
+}
 .nav {
     margin-left: 30px;
 }
